Sat Mar 14 02:12:44 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkmain.c gdk/gdk.c: Don't leave NULL's in argv.

Sat Mar 14 01:36:51 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk-config.in: Added -I $exec_prefix/glib/include to cflags

Sat Mar 14 00:03:34 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkwindow.c:
          Don't resize windows when request is rejected by WM.
	  Only use the resize count to guess whether a Configure
	  event was a rejection by the WM, or a move.

	* gdk/gdk.c gdk/gdktypes.h: 
	  - Don't XDestroyWindow foreign windows (If they're a child of
	  one of our windows, reparent them to root and send them a WM 
	  delete event, otherwise, just delete the GTK structure.) 
	  Handle notification of their deletion properly.
          (Made foreign windows a seperate window type to do this)
	
	* gtk/gtkobject.c (gtk_object_set_data_full): 
	  Call the DestroyNotify when replacing the object data.

Sat Mar 14 02:03:13 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtksignal.c: make use of *_by_id() functions for handler key.

	* gtk/gtkwidget.c: make use of *_by_id() functions for a bunch of keys.
 	(gtk_widget_shutdown): new function to perform pre-destruction shutdown
 	of the widget.
	(gtk_widget_unparent): call gtk_widget_set_parent_window(widget,NULL)

	* gtk/gtkobject.h: 
	* gtk/gtkobject.c: GtkObject destruction is now split into an internally
	used shutdown class method and the usual GtkObject::destroy signal
 	emission. this allowes for class based shutdown functionality prior
	to actuall object destruction.
	added *_by_id() counterparts for gtk_object_data_* functions, meant for
	internal use only.

	* gtk/gtkmain.c (gtk_quit_add_destroy): new function which will destroy
	a GtkObject once gtk_main() of a certain level finishes. it is save to
	destroy the object prior to that, gtk_quit_add_destroy will only destroy
	objects that are still existing.

1998-03-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>
